added some basic styling to progress bar (Chrome only for now)

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
   <title>Pomodoro</title>
 </head>
 <body>
-  <h1>Hello Pomodoro!</h1>
+  <h1>Steve's Pomodoro</h1>
   <div id="clock">
     <!-- clock injected here -->
   </div>
