added start/restart and pause controls

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
   <h1>Steve's Pomodoro</h1>
+  <div id="controls">
+    <!-- controls injected here -->
+  </div>
   <div id="clock">
     <!-- clock injected here -->
   </div>
