--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="./js/bundle.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet"> 
   <link rel="stylesheet" href="./css/style.css">
   <title>Pomodoro</title>
 </head>
