more style changes, removed merriweather font

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="./js/bundle.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <title>Pomodoro</title>
 </head>
 <body>
-  <h1>Steve's Pomodoro</h1>
+  <h1>pomodoro</h1>
+  <h2>click on the tomato to (re)start</h2>
   <div id="controls">
     <!-- controls injected here -->
   </div>
