--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,5 +18,10 @@
   <div id="clock">
     <!-- clock injected here -->
   </div>
+  <p class="credit">sound by daniel simion, under a cc-by licence</p>
+  <audio id="alarm">
+    <source src="./audio/alarm.mp3" type="audio/mpeg">
+    <p>Your browser does not support the audio element.</p>
+  </audio>
 </body>
 </html>
