--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,10 @@
   <title>Pomodoro</title>
 </head>
 <body>
-  <h1>pomodoro</h1>
-  <h2>click on the tomato to (re)start</h2>
+  <header>
+    <h1>pomodoro</h1>
+    <h2>click on the tomato to (re)start</h2>
+  </header>
   <div id="controls">
     <!-- controls injected here -->
   </div>
